src/components/Feed/_feedProyect.module.scss
@import "../../theme/colors.scss";
@import "../../theme/fonts.scss";
@import "../../theme/breakpoints.scss";

.container{
    z-index:1;
    padding-top:3rem;
    display:flex;
    background:$darkGray;
    justify-content:center;
    position: relative;
    overflow: hidden;    
    margin: 1rem;
    @include media("<=tablet"){
        padding:3rem;
        flex-direction: column;
    }
    @include media("<=phone"){
        padding:0rem;
    }
}

.data{
    align-self: center;
    display:flex;
    flex-direction:column;
    text-align:justify;
    padding:1rem;
    max-width:573px;
    // max-height:272px;
    @include media("<=tablet"){
        margin:auto;
        z-index: 2;
    }
}

.title{
    @extend .title;
    color:$primaryColor;
}

.technologiesContainer{
    margin-top: 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.webMockup{
    position: relative;
    width: 50%;
    height: 100%;
    background-image: url('../../assets/img/mockups/laptop-mockup.png');
    background-repeat: no-repeat;
    background-size: contain;    
    
}

